# notion

./: .gitignore  .vercelignore  Cargo.toml  Dockerfile  FREE_DEPLOY_GUIDE.md  LICENSE  NETLIFY_DEPLOY.md  RAILWAY_DEPLOY.md  README.md  Trunk.toml  VERCEL_DEPLOY.md  _redirects  index.html  netlify.toml  nginx.conf  railway.toml  test-wasm.html  vercel-build.sh  vercel.json
.github/workflows/: deploy.yml  pages.yml  vercel.yml
api/: notion.js
src/: main.rs  styles.css
src/api/: mod.rs
src/components/: calendar.rs  event_modal.rs  mod.rs  settings.rs
src/pages/: mod.rs
src/types/: mod.rs
src/utils/: mod.rs
